# Client

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  AscensionMockup.pro  Browser.ui  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTION.md  ISSUE_TEMPLATE.md  Icons.qrc  LICENSE.txt  Launcher.ui  Library.ui  ProjectAscension.cmake  ProjectAscension.pro  QWinWidget.cpp  QWinWidget.h  QtWinMigrate.pri  README.md  annotated.html  annotated.js  classes.html  dir_226795f55c32ef5a0022b49e6cf7e29c.html  dir_226795f55c32ef5a0022b49e6cf7e29c.js  dir_226795f55c32ef5a0022b49e6cf7e29c_dep.map  dir_226795f55c32ef5a0022b49e6cf7e29c_dep.md5  dir_3351ccde1c8e76c94b2646e58f977f32.html  dir_3351ccde1c8e76c94b2646e58f977f32.js  dir_3351ccde1c8e76c94b2646e58f977f32_dep.map  dir_3351ccde1c8e76c94b2646e58f977f32_dep.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.map  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_87a455bccb09a92130c26a11a880c98a.html  dir_87a455bccb09a92130c26a11a880c98a.js  dir_87a455bccb09a92130c26a11a880c98a_dep.map  dir_87a455bccb09a92130c26a11a880c98a_dep.md5  dir_99d0482cf009f9d97a0877749b817f19.html  (+47 more)
BorderlessWindow/: BorderlessWindow.css  Common.pri  QWinHost.cpp  QWinWidget.cpp  QtWinMigrate.pri
Resource/: Content.css  Elements.qrc  Fonts.qrc  Icons.qrc  Launcher.rc  PAClient.css  Styles.qrc
Resource/CMake/: Ascension_Icon.icns  MacOSXBundleInfo.plist.in
Resource/UI/: Browser.ui  BuddyList.ui  Community.ui  Library.ui  News.ui  Settings.ui  homepage.ui  news.ui  settings.ui
Source/: AddGameWizard.cpp  AddGameWizard.h  AscensionDialog.cpp  AscensionDialog.h  BorderlessWindow.cpp  BorderlessWindow.h  Browser.cpp  Browser.h  BuddyList.cpp  BuddyList.h  BuddyWidget.cpp  BuddyWidget.h  Community.cpp  Community.h  DRMSetupWizard.cpp  DRMSetupWizard.h  Database.cpp  Database.h  Game.h  Homepage.cpp  Homepage.h  Init.h  Launcher.cpp  Launcher.h  Library.cpp  Library.h  Main.cpp  MainPanel.cpp  MainPanel.h  MainWindow.cpp  MainWindow.h  News.cpp  News.h  NewsFeedWidget.cpp  NewsFeedWidget.h  QMainPanel.cpp  QMainPanel.h  Settings.cpp  Settings.h  Sidebar.cpp  (+22 more)
Source/Libs/: SteamVdfParse.hpp
Tests/: Test.h
d0/d02/: class_uplay_d_r_m-members.html
d0/d36/: struct_steam_vdf_parse_1_1_game_header-members.html
d0/d3b/: class_database-members.html
d0/d3f/: util_8hpp_source.html
d0/d42/: class_last_page.html  class_last_page.js
d0/d59/: class_final_page__inherit__graph.map  class_final_page__inherit__graph.md5
d0/dbc/: class_d_r_m_type.html  class_d_r_m_type.js  class_d_r_m_type__inherit__graph.map  class_d_r_m_type__inherit__graph.md5
d0/dfc/: class_d_r_m_page__coll__graph.map  class_d_r_m_page__coll__graph.md5
d1/d0f/: class_ascension_dialog-members.html
d1/d10/: class_ascension_dialog.html  class_ascension_dialog.js
d1/d66/: class_settings__coll__graph.map  class_settings__coll__graph.md5
d1/d70/: class_intro_page-members.html
d1/d88/: class_main_panel.html  class_main_panel.js
d1/db9/: class_add_game_wizard__inherit__graph.md5  class_sidebar-members.html
d1/dcc/: class_origin_d_r_m-members.html
d1/df5/: class_init_page.html  class_init_page.js
d1/dfb/: unix__panel_8h_source.html
d2/d11/: class_news-members.html
d2/d2b/: class_unix_window.html  class_unix_window.js
d2/d37/: drm__setup__wizard_8h_source.html
d2/d4b/: class_borderless_window.html  class_borderless_window.js
d2/d84/: class_library__inherit__graph.map
d2/dc8/: class_origin_d_r_m__inherit__graph.map
d2/de2/: class_add_game_wizard__coll__graph.map  class_add_game_wizard__coll__graph.md5
d3/d11/: class_origin_d_r_m__coll__graph.md5
d3/d3c/: class_intro_page.html  class_intro_page.js
d3/d55/: class_news__inherit__graph.md5
d3/db6/: borderless__window_8h_source.html
d3/def/: class_q_win_widget__coll__graph.map  class_q_win_widget__coll__graph.md5  class_unix_window__coll__graph.map  class_unix_window__coll__graph.md5
d4/d2b/: class_q_win_widget__inherit__graph.map  class_q_win_widget__inherit__graph.md5
d4/d37/: class_intro_page__inherit__graph.map  class_intro_page__inherit__graph.md5
d4/d65/: class_last_page__inherit__graph.md5
d4/d77/: class_final_page-members.html
d4/d89/: class_origin_d_r_m.html  class_origin_d_r_m.js  qwinhost_8h_source.html
d5/d11/: main__panel_8h_source.html
doc/: Doxyfile
docs/: Doxyfile
res/: elements.qrc  fonts.qrc  icons.qrc  launcher.rc  launcher.res  pa_client.css  styles.qrc
search/: all_0.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  (+21 more)
src/: CMakeLists.txt  database.cpp  database.h  game.h  init.h  main.cpp  util.hpp  widgets.h
src/drm/: drm_all.h  drm_type.cpp  drm_type.h  origin_drm.cpp  origin_drm.h  steam_drm.cpp  steam_drm.h  uplay_drm.cpp  uplay_drm.h
src/gui/: main_panel.cpp  main_panel.h  sidebar.cpp  sidebar.h  tab_widget.cpp  unix_panel.cpp  unix_panel.h  unix_window.cpp  unix_window.h  win_panel.cpp  win_panel.h  win_window.cpp  win_window.h
src/gui/borderless/: borderless_window.cpp  borderless_window.h  qwinhost.cpp  qwinhost.h  qwinwidget.cpp  qwinwidget.h
src/gui/dialogs/: ascension_dialog.cpp  ascension_dialog.h
src/gui/stack/: library.cpp  library.h  news.cpp  news.h  news_feed_widget.cpp  news_feed_widget.h  settings.cpp  settings.h
src/gui/wizards/: add_game_wizard.cpp  add_game_wizard.h  drm_setup_wizard.cpp  drm_setup_wizard.h  drm_type.cpp  drm_type.h
src/libs/: catch.hpp  steam_vdf_parse.hpp
tests/: CMakeLists.txt  Test.cpp  appinfo.vdf  database_test.cpp  game  main.cpp  test  test.cpp  test.h  vdf_test.cpp
tests/lib/: auto_test.hpp  catch.hpp
(+125 files in other folders)
