project(ProjectAscension C CXX)
if(WIN32)
    cmake_minimum_required(VERSION 3.1.0)
    set(CMAKE_CXX_STANDARD 11)
else()
    cmake_minimum_required(VERSION 2.8.12)
    add_compile_options(-std=c++11)
endif()

enable_testing(true)
add_subdirectory(tests)

if(NOT ONLY_TESTS)
    add_subdirectory(src)
endif()
